--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.9.1",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
